-bug#0000983: Bad SQL: snmp_query_graph_rrd.snmp_query_graph_id=
-bug#0000984: Poller does not correctly flush poller_output table after a memory error
-bug#0000989: hyphen - host description used with Data Source Path
-bug#0001001: "Purge User Log" keeps invalid entries
-bug#0001002: Cacti reports incomplete interface status
-bug: ss_sql.php causes the script server to crash
-bug: Timeshifter added to base code.
-bug: Allow query_ and host_ substitution in COMMENT and CDEF's.
-bug: Command line interface scripts to add devices, graphs, tree's and permissions.
-bug: Correct index error when creating graphs when you have no hosts on your system.
-bug: More recent versions of net-snmp broke SNMP walk functions.
-bug: Adjust for problematic responses from some SNMP agents (IBM AIX).
-bug: Improve logging in cmd.php and poller.php when parameters are not specified correctly.
-bug: Reduce the total number of SQL queries called
-bug: Replace inefficient strip function in process_poller_output
-bug: Some php_snmp implementations return strings as "Hex-STRING:".  In these cases properly resolve the string
-bug: Correctly assign right and left click actions for Opera
-bug: Fix SQL error when viewing an invalid Data Source via the Log Viewer
-bug: Fix command line user copy utility
-feature: Paginate the Graph Creation Page
-feature: Add SNMPv3 Support to Cacti
-feature: Add a Notes field to the Device that can contain arbitrary information
-feature: Add Availability Methods to Cacti including per Host Ping Methods and Timeouts
-feature: Add Max OID's to te Host Level
-feature: Allow CSV Export from the various Graphs page
-feature: Add rra_path as a global.php config variable
-feature: Add drop down actions to data queries
-feature: Add drop down actions to data input methods
-feature: Add drop down actions to user administration
-feature: Add filtering and pagination to data queries
-feature: Add filtering and pagination to data input methods